# softtest

./: CMakeLists.txt  CMakePresets.json  Lexer.h  Parser.h  README.md  SemanticAnalyzer.h  Token.h  Type.h  TypeChecker.h  config.py  eval_nscscc_samples.py  main.cpp  main.py  utils.py
